--- a/.github/workflows/privado.yml
+++ b/.github/workflows/privado.yml
@@ -7,8 +7,8 @@ jobs:
     if: github.ref_name == github.event.repository.default_branch
     env:
       PRIVADO_API_TOKEN: ${{ secrets.PRIVADO_API_TOKEN }}
-      PRIVADO_API_ID: "f7a756eb-b903-43cf-98ac-4762af54add0"
-      PRIVADO_API_HOST: "https://t.api.code.privado.ai/test"
+      PRIVADO_API_ID: "A61746A4B2DC7B62D05FA305"
+      PRIVADO_API_HOST: "https://t.ent.code.privado.ai"
       PRIVADO_CI_PLATFORM: "GITHUB_ACTIONS"
       PRIVADO_DOCKER_IMAGE: 638117407428.dkr.ecr.ap-south-1.amazonaws.com/scanner-agent:latest
       PRIVADO_REPOSITORY_ID: ${{ github.repository_id }}
